# GamersToolKit

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO-analysis.md  TODO-infrastructure.md  TODO-overlay.md  TODO-profiles.md  TODO-vision.md  TODO.md  build.rs
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: STACK_PLAN.md
profiles/: example.json
specs/: .notion-sync-state.json  root.blocks.json
src/: app.rs  hotkey.rs  main.rs
src/analysis/: events.rs  mod.rs  rules.rs
src/capture/: frame.rs  mod.rs
src/config/: mod.rs
src/dashboard/: app.rs  mod.rs  state.rs  theme.rs
src/dashboard/components/: mod.rs  scroll_slider.rs  sidebar.rs  status_card.rs
src/dashboard/views/: capture.rs  home.rs  mod.rs  overlay.rs  profiles.rs  screens.rs  settings.rs  vision.rs  zone_ocr.rs
src/mcp/: mod.rs  prompts.rs  resources.rs  tools.rs
src/overlay/: mod.rs  widgets.rs  zone_selection.rs
src/shared/: messages.rs  mod.rs  state.rs
src/storage/: database.rs  mod.rs  profiles.rs
src/vision/: detection.rs  mod.rs  models.rs  ocr.rs  ocr_preprocess.rs  preprocess.rs  screen_recognition.rs  windows_ocr.rs
